RESOLVED FIXED182497
[iOS] VideoFullscreenInterfaceAVKit should not ignore errors
https://bugs.webkit.org/show_bug.cgi?id=182497
Summary [iOS] VideoFullscreenInterfaceAVKit should not ignore errors
Eric Carlson
Reported 2018-02-05 11:28:37 PST
Don't ignore errors returned by -[AVPlayerViewController enterFullScreenAnimated:completionHandler:] or -[AVPlayerViewController exitFullScreenAnimated:completionHandler:].
Attachments
Patch (13.83 KB, patch)
2018-02-05 12:29 PST, Eric Carlson
no flags
Eric Carlson
Comment 1 2018-02-05 11:29:15 PST
Eric Carlson
Comment 2 2018-02-05 12:29:24 PST
WebKit Commit Bot
Comment 3 2018-02-05 12:59:02 PST
Comment on attachment 333109 [details] Patch Clearing flags on attachment: 333109 Committed r228115: <https://trac.webkit.org/changeset/228115>
WebKit Commit Bot
Comment 4 2018-02-05 12:59:03 PST
All reviewed patches have been landed. Closing bug.
John Wilander
Comment 5 2018-02-05 13:36:23 PST
I'm fixing the iOS build.
John Wilander
Comment 6 2018-02-05 13:42:40 PST
Note You need to log in before you can comment on or make changes to this bug.